--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,8 @@ authors = ["lxvm <lorenzo@vanmunoz.com>"]
 version = "0.1.0"
 
 [compat]
-Aqua = "0.7"
+Aqua = "0.8"
+Test = "1.6"
 julia = "1.6"
 
 [extras]
